PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/NoForEachLoopAssignment.par
NoForEachLoopAssignment {
seq main() : Void {
   var [Int] test = init_List([2])

   for var Int element = 0 in test {
        element++
   }
   return
}
}